{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 128,
  "lineage": "23b99204-105a-4e97-caf6-b2e63700d0e2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "Inbound-rule-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "TCP"
              },
              {
                "ports": [],
                "protocol": "ICMP"
              }
            ],
            "creation_timestamp": "2023-06-02T00:39:38.233-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/inbound-rule-01",
            "log_config": [],
            "name": "inbound-rule-01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "priority": 1,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/inbound-rule-01",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "Outbound-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "TCP"
              },
              {
                "ports": [],
                "protocol": "ICMP"
              }
            ],
            "creation_timestamp": "2023-06-02T00:39:38.153-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/outbound-rule-01",
            "log_config": [],
            "name": "outbound-rule-01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "priority": 1,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/outbound-rule-01",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "Prod-Inbound-rule-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "TCP"
              },
              {
                "ports": [],
                "protocol": "ICMP"
              }
            ],
            "creation_timestamp": "2023-06-02T00:39:38.213-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/prod-inbound-rule-01",
            "log_config": [],
            "name": "prod-inbound-rule-01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/prod-nw-01",
            "priority": 1,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/prod-inbound-rule-01",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.prod-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "Prod-Outbound-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "TCP"
              },
              {
                "ports": [],
                "protocol": "ICMP"
              }
            ],
            "creation_timestamp": "2023-06-02T00:39:38.203-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/prod-outbound-rule-01",
            "log_config": [],
            "name": "prod-outbound-rule-01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/prod-nw-01",
            "priority": 1,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/prod-outbound-rule-01",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.prod-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev-instance-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230429",
                    "labels": {
                      "my_label": "dev-instance-01"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/disks/dev-instance-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-383907/zones/us-central1-a/instances/dev-instance-01",
            "instance_id": "6878675042923979303",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "PPak5PCn-dc=",
            "name": "dev-instance-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.123.117.245",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
                "network_ip": "192.168.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/dev-sub-nw-01",
                "subnetwork_project": "terraform-gcp-383907"
              }
            ],
            "project": "terraform-gcp-383907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/instances/dev-instance-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "instance"
            ],
            "tags_fingerprint": "cL6wNxAMmWo=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.dev-nw-01",
            "google_compute_subnetwork.dev-sub-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prod-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230429",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/disks/prod-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-383907/zones/us-central1-a/instances/prod-instance",
            "instance_id": "5046188591379915299",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "PPak5PCn-dc=",
            "name": "prod-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.133.51.157",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/prod-nw-01",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/prod-sub-nw-01",
                "subnetwork_project": "terraform-gcp-383907"
              }
            ],
            "project": "terraform-gcp-383907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/instances/prod-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "instance",
              "prod-instance"
            ],
            "tags_fingerprint": "2CeVzHm2zv8=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.prod-nw-01",
            "google_compute_subnetwork.prod-sub-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "dev-nw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "mtu": 1440,
            "name": "dev-nw-01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "terraform-gcp-383907",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "prod-nw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-383907/global/networks/prod-nw-01",
            "mtu": 1440,
            "name": "prod-nw-01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "terraform-gcp-383907",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/prod-nw-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "dev-sub-nw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-02T00:39:38.399-07:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/terraform-gcp-383907/regions/us-central1/subnetworks/dev-sub-nw-01",
            "ip_cidr_range": "192.168.0.0/29",
            "name": "dev-sub-nw-01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-383907",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/dev-sub-nw-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-sub-nw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-02T00:39:39.282-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-gcp-383907/regions/us-central1/subnetworks/prod-sub-nw-01",
            "ip_cidr_range": "10.0.0.0/29",
            "name": "prod-sub-nw-01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/prod-nw-01",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-383907",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/prod-sub-nw-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.prod-nw-01"
          ]
        }
      ]
    }
  ]
}